Addressed lint issues.